--- a/index.html
+++ b/index.html
@@ -11,185 +11,241 @@
       rel="stylesheet"
     />
     <!-- Style -->
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
-    <title>Effective Solutions for Your Business</title>
+    <title>WebStudio</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
-    <header>
-      <nav>
-        <a class="content-logo" href="./index.html"
-          >Web<span class="content-studio">Studio</span></a
-        >
-        <ul>
-          <li>
-            <a class="content-header-nav" href="./index.html">Studio</a>
-          </li>
-          <li>
-            <a class="content-header-nav" href="">Portfolio</a>
-          </li>
-          <li>
-            <a class="content-header-nav" href="">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="adress">
-        <ul>
-          <li>
-            <a class="contact-adress" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
+    <header class="header">
+      <div class="conteiner">
+        <div class="header-inner">
+          <nav class="header-list">
+            <a class="content-logo" href="./index.html"
+              >Web<span class="content-studio">Studio</span></a
             >
-          </li>
-          <li>
-            <a class="contact-adress" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+            <ul class="header-meny">
+              <li>
+                <a class="header-meny-list" href="./index.html">Studio</a>
+              </li>
+              <li>
+                <a class="header-meny-list" href="">Portfolio</a>
+              </li>
+              <li>
+                <a class="header-meny-list" href="">Contacts</a>
+              </li>
+            </ul>
+          </nav>
+
+          <div class="header-adress">
+            <address class="adress">
+              <ul class="adress-nav">
+                <li>
+                  <a class="adress-info" href="mailto:info@devstudio.com"
+                    >info@devstudio.com</a
+                  >
+                </li>
+                <li>
+                  <a class="adress-info" href="tel:+110001111111"
+                    >+11 (000) 111-11-11</a
+                  >
+                </li>
+              </ul>
+            </address>
+          </div>
+        </div>
+      </div>
     </header>
     <main>
-      <!-- Top line -->
-      <section class="slog-but">
-        <h1 class="slogan">Effective solutions for your business</h1>
-        <button class="btn-service" type="button">Order service</button>
+      <!-- Hero section -->
+      <section class="hero-logo">
+        <div class="container">
+          <div class="hero-inner">
+            <h1 class="hero-slogan">Effective solutions for your business</h1>
+            <div class="hero-actions">
+              <button class="button-primery" type="button">
+                Order service
+              </button>
+            </div>
+          </div>
+        </div>
       </section>
       <!-- Deteilse -->
 
-      <section>
-        <h2>Punctuality</h2>
-        <ul>
-          <li>
-            <h3 class="category">Strategy</h3>
-            <p class="text-category">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="category">Punctuality</h3>
-            <p class="text-category">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="category">Diligence</h3>
-            <p class="text-category">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="category">Technologies</h3>
-            <p class="text-category">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+      <section class="adventege-section">
+        <div class="container">
+          <h2 class="visually-hidden">Punctuality</h2>
+          <ul class="adventege-list">
+            <li class="adventege-item">
+              <h3 class="category">Strategy</h3>
+              <p class="text-category">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="adventege-item">
+              <h3 class="category">Punctuality</h3>
+              <p class="text-category">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="adventege-item">
+              <h3 class="category">Diligence</h3>
+              <p class="text-category">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="adventege-item">
+              <h3 class="category">Technologies</h3>
+              <p class="text-category">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- Our team -->
-      <section class="team">
-        <h2 class="text-titel">Our team</h2>
-        <ul>
-          <li class="team-frame">
-            <!-- mark -->
+      <section class="team-section">
+        <div class="container">
+          <div class="team-list">
+            <h2 class="text-titel">Our team</h2>
+            <ul class="team-inner">
+              <li class="team-frame">
+                <!-- mark -->
 
-            <img src="./images/img.jpg" alt="Photo Mark" width="264" />
-            <h3 class="team-name">Mark Guerrero</h3>
-            <p class="team-position">Product Designer</p>
-          </li>
-          <!-- tom -->
-          <li class="team-frame">
-            <img src="./images/img2.jpg" alt="Photo Tom" width="264" />
-            <h3 class="team-name">Tom Ford</h3>
-            <p class="team-position">Frontend Developer</p>
-          </li>
-          <!-- camila -->
-          <li class="team-frame">
-            <img src="./images/img3.jpg" alt="Photo Camila" width="264" />
-            <h3 class="team-name">Camila Garcia</h3>
-            <p class="team-position">Marketing</p>
-          </li>
-          <!-- daniel -->
-          <li class="team-frame">
-            <img src="./images/img4.jpg" alt="Photo Camila" width="264" />
-            <h3 class="team-name">Daniel Wilson</h3>
-            <p class="team-position">UI Designer</p>
-          </li>
-        </ul>
+                <img
+                  class="team-icon"
+                  src="./images/img.jpg"
+                  alt="Photo Mark"
+                  width="264"
+                />
+                <h3 class="team-name">Mark Guerrero</h3>
+                <p class="team-position">Product Designer</p>
+              </li>
+              <!-- tom -->
+              <li class="team-frame">
+                <img
+                  class="team-icon"
+                  src="./images/img2.jpg"
+                  alt="Photo Tom"
+                  width="264"
+                />
+                <h3 class="team-name">Tom Ford</h3>
+                <p class="team-position">Frontend Developer</p>
+              </li>
+              <!-- camila -->
+              <li class="team-frame">
+                <img
+                  class="team-icon"
+                  src="./images/img3.jpg"
+                  alt="Photo Camila"
+                  width="264"
+                />
+                <h3 class="team-name">Camila Garcia</h3>
+                <p class="team-position">Marketing</p>
+              </li>
+              <!-- daniel -->
+              <li class="team-frame">
+                <img
+                  class="team-icon"
+                  src="./images/img4.jpg"
+                  alt="Photo Camila"
+                  width="264"
+                />
+                <h3 class="team-name">Daniel Wilson</h3>
+                <p class="team-position">UI Designer</p>
+              </li>
+            </ul>
+          </div>
+        </div>
       </section>
       <!-- portfolio -->
-      <section>
-        <h2 class="text-titel">Our Portfolio</h2>
-        <ul>
-          <li class="portfolio-frame">
-            <img
-              src="./images/portfolio/bankingapp.jpg"
-              alt="Banking App"
-              width="360"
-            />
-            <h3 class="portfolio-offers">Banking App</h3>
-            <p class="portfolio-text">App</p>
-          </li>
-          <li class="portfolio-frame">
-            <img
-              src="./images/portfolio/cashles.jpg"
-              alt="cashles"
-              width="360"
-            />
-            <h3 class="portfolio-offers">Cashless Payment</h3>
-            <p class="portfolio-text">Marketing</p>
-          </li>
-          <li class="portfolio-frame">
-            <img
-              src="./images/portfolio/maditation.jpg"
-              alt="meditation"
-              width="360"
-            />
-            <h3 class="portfolio-offers">Meditation App</h3>
-            <p class="portfolio-text">App</p>
-          </li>
-          <li class="portfolio-frame">
-            <img
-              src="./images/portfolio/taxiservice.jpg"
-              alt="taxi service"
-              width="360"
-            />
-            <h3 class="portfolio-offers">Taxi Service</h3>
-            <p class="portfolio-text">Marketing</p>
-          </li>
-          <li class="portfolio-frame">
-            <img src="./images/portfolio/screen.jpg" alt="screen" width="360" />
-            <h3 class="portfolio-offers">Screen Illustrations</h3>
-            <p class="portfolio-text">Design</p>
-          </li>
-          <li class="portfolio-frame">
-            <img
-              src="./images/portfolio/onlinecourses.jpg"
-              alt="online courses"
-              width="360"
-            />
-            <h3 class="portfolio-offers">Online Courses</h3>
-            <p class="portfolio-text">Marketing</p>
-          </li>
-        </ul>
+      <section class="portfolio-section">
+        <div class="container">
+          <h2 class="text-titel">Our Portfolio</h2>
+          <div class="portfolio-adition">
+            <ul class="portfolio-item">
+              <li class="portfolio-frame">
+                <img
+                  src="./images/portfolio/bankingapp.jpg"
+                  alt="Banking App"
+                  width="360"
+                />
+                <h3 class="portfolio-offers">Banking App</h3>
+                <p class="portfolio-text">App</p>
+              </li>
+              <li class="portfolio-frame">
+                <img
+                  src="./images/portfolio/cashles.jpg"
+                  alt="cashles"
+                  width="360"
+                />
+                <h3 class="portfolio-offers">Cashless Payment</h3>
+                <p class="portfolio-text">Marketing</p>
+              </li>
+              <li class="portfolio-frame">
+                <img
+                  src="./images/portfolio/maditation.jpg"
+                  alt="meditation"
+                  width="360"
+                />
+                <h3 class="portfolio-offers">Meditation App</h3>
+                <p class="portfolio-text">App</p>
+              </li>
+
+              <li class="portfolio-frame">
+                <img
+                  src="./images/portfolio/taxiservice.jpg"
+                  alt="taxi service"
+                  width="360"
+                />
+                <h3 class="portfolio-offers">Taxi Service</h3>
+                <p class="portfolio-text">Marketing</p>
+              </li>
+              <li class="portfolio-frame">
+                <img
+                  src="./images/portfolio/screen.jpg"
+                  alt="screen"
+                  width="360"
+                />
+                <h3 class="portfolio-offers">Screen Illustrations</h3>
+                <p class="portfolio-text">Design</p>
+              </li>
+              <li class="portfolio-frame">
+                <img
+                  src="./images/portfolio/onlinecourses.jpg"
+                  alt="online courses"
+                  width="360"
+                />
+                <h3 class="portfolio-offers">Online Courses</h3>
+                <p class="portfolio-text">Marketing</p>
+              </li>
+            </ul>
+          </div>
+        </div>
       </section>
     </main>
-    <footer class="foot">
-      <a class="foot-logo" href="./index.html"
-        >Web<span class="foot-studio">Studio</span></a
-      >
-      <p class="foot-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+    <footer class="foot-section">
+      <div class="container">
+        <a class="foot-logo" href="./index.html"
+          >Web<span class="foot-studio">Studio</span></a
+        >
+        <p class="foot-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
