--- a/index.html
+++ b/index.html
@@ -44,40 +44,33 @@
             </ul>
           </nav>
 
-          <div class="header-adress">
-            <address class="adress">
-              <ul class="adress-nav">
-                <li>
-                  <a class="adress-info" href="mailto:info@devstudio.com"
-                    >info@devstudio.com</a
-                  >
-                </li>
-                <li>
-                  <a class="adress-info" href="tel:+110001111111"
-                    >+11 (000) 111-11-11</a
-                  >
-                </li>
-              </ul>
-            </address>
-          </div>
+          <address class="adress">
+            <ul class="adress-nav">
+              <li>
+                <a class="adress-info" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li>
+                <a class="adress-info" href="tel:+110001111111"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+            </ul>
+          </address>
         </div>
       </div>
     </header>
     <main>
-      <!-- Hero section -->
+      <!-- Hero section -1-->
       <section class="hero-logo">
         <div class="container">
-          <div class="hero-inner">
-            <h1 class="hero-slogan">Effective solutions for your business</h1>
-            <div class="hero-actions">
-              <button class="button-primery" type="button">
-                Order service
-              </button>
-            </div>
-          </div>
+          <h1 class="hero-slogan">Effective solutions for your business</h1>
+
+          <button class="button-primery" type="button">Order service</button>
         </div>
       </section>
-      <!-- Deteilse -->
+      <!-- Deteilse section-2-->
 
       <section class="adventege-section">
         <div class="container">
@@ -115,124 +108,144 @@
         </div>
       </section>
 
-      <!-- Our team -->
+      <!-- Our team section-3-->
       <section class="team-section">
         <div class="container">
-          <div class="team-list">
-            <h2 class="text-titel">Our team</h2>
-            <ul class="team-inner">
-              <li class="team-frame">
-                <!-- mark -->
+          <h2 class="team-titel">Our team</h2>
+          <ul class="team-inner">
+            <li class="team-frame">
+              <!-- mark -->
 
-                <img
-                  class="team-icon"
-                  src="./images/img.jpg"
-                  alt="Photo Mark"
-                  width="264"
-                />
-                <h3 class="team-name">Mark Guerrero</h3>
+              <img
+                class="team-icon"
+                src="./images/img.jpg"
+                alt="Photo Mark"
+                width="264"
+              />
+              <div class="team-name">
+                <h3 class="team-name-list">Mark Guerrero</h3>
+
                 <p class="team-position">Product Designer</p>
-              </li>
-              <!-- tom -->
-              <li class="team-frame">
-                <img
-                  class="team-icon"
-                  src="./images/img2.jpg"
-                  alt="Photo Tom"
-                  width="264"
-                />
-                <h3 class="team-name">Tom Ford</h3>
+              </div>
+            </li>
+            <!-- tom -->
+            <li class="team-frame">
+              <img
+                class="team-icon"
+                src="./images/img2.jpg"
+                alt="Photo Tom"
+                width="264"
+              />
+              <div class="team-name">
+                <h3 class="team-name-list">Tom Ford</h3>
+
                 <p class="team-position">Frontend Developer</p>
-              </li>
-              <!-- camila -->
-              <li class="team-frame">
-                <img
-                  class="team-icon"
-                  src="./images/img3.jpg"
-                  alt="Photo Camila"
-                  width="264"
-                />
-                <h3 class="team-name">Camila Garcia</h3>
+              </div>
+            </li>
+            <!-- camila -->
+            <li class="team-frame">
+              <img
+                class="team-icon"
+                src="./images/img3.jpg"
+                alt="Photo Camila"
+                width="264"
+              />
+              <div class="team-name">
+                <h3 class="team-name-list">Camila Garcia</h3>
+
                 <p class="team-position">Marketing</p>
-              </li>
-              <!-- daniel -->
-              <li class="team-frame">
-                <img
-                  class="team-icon"
-                  src="./images/img4.jpg"
-                  alt="Photo Camila"
-                  width="264"
-                />
-                <h3 class="team-name">Daniel Wilson</h3>
+              </div>
+            </li>
+            <!-- daniel -->
+            <li class="team-frame">
+              <img
+                class="team-icon"
+                src="./images/img4.jpg"
+                alt="Photo Camila"
+                width="264"
+              />
+              <div class="team-name">
+                <h3 class="team-name-list">Daniel Wilson</h3>
+
                 <p class="team-position">UI Designer</p>
-              </li>
-            </ul>
-          </div>
+              </div>
+            </li>
+          </ul>
         </div>
       </section>
-      <!-- portfolio -->
+      <!-- portfolio  section-4-->
       <section class="portfolio-section">
         <div class="container">
-          <h2 class="text-titel">Our Portfolio</h2>
-          <div class="portfolio-adition">
-            <ul class="portfolio-item">
-              <li class="portfolio-frame">
-                <img
-                  src="./images/portfolio/bankingapp.jpg"
-                  alt="Banking App"
-                  width="360"
-                />
+          <h2 class="portfolio-titel">Our portfolio</h2>
+          <ul class="portfolio-item">
+            <li class="portfolio-frame">
+              <img
+                src="./images/portfolio/bankingapp.jpg"
+                alt="Banking App"
+                width="360"
+              />
+              <div class="portfolio-list">
                 <h3 class="portfolio-offers">Banking App</h3>
                 <p class="portfolio-text">App</p>
-              </li>
-              <li class="portfolio-frame">
-                <img
-                  src="./images/portfolio/cashles.jpg"
-                  alt="cashles"
-                  width="360"
-                />
+              </div>
+            </li>
+            <li class="portfolio-frame">
+              <img
+                src="./images/portfolio/cashles.jpg"
+                alt="cashles"
+                width="360"
+              />
+              <div class="portfolio-list">
                 <h3 class="portfolio-offers">Cashless Payment</h3>
                 <p class="portfolio-text">Marketing</p>
-              </li>
-              <li class="portfolio-frame">
-                <img
-                  src="./images/portfolio/maditation.jpg"
-                  alt="meditation"
-                  width="360"
-                />
+              </div>
+            </li>
+            <li class="portfolio-frame">
+              <img
+                src="./images/portfolio/maditation.jpg"
+                alt="meditation"
+                width="360"
+              />
+              <div class="portfolio-list">
                 <h3 class="portfolio-offers">Meditation App</h3>
                 <p class="portfolio-text">App</p>
-              </li>
+              </div>
+            </li>
 
-              <li class="portfolio-frame">
-                <img
-                  src="./images/portfolio/taxiservice.jpg"
-                  alt="taxi service"
-                  width="360"
-                />
+            <li class="portfolio-frame">
+              <img
+                src="./images/portfolio/taxiservice.jpg"
+                alt="taxi service"
+                width="360"
+              />
+              <div class="portfolio-list">
                 <h3 class="portfolio-offers">Taxi Service</h3>
                 <p class="portfolio-text">Marketing</p>
-              </li>
-              <li class="portfolio-frame">
-                <img
-                  src="./images/portfolio/screen.jpg"
-                  alt="screen"
-                  width="360"
-                />
+              </div>
+            </li>
+            <li class="portfolio-frame">
+              <img
+                src="./images/portfolio/screen.jpg"
+                alt="screen"
+                width="360"
+              />
+              <div class="portfolio-list">
                 <h3 class="portfolio-offers">Screen Illustrations</h3>
                 <p class="portfolio-text">Design</p>
-              </li>
-              <li class="portfolio-frame">
-                <img
-                  src="./images/portfolio/onlinecourses.jpg"
-                  alt="online courses"
-                  width="360"
-                />
+              </div>
+            </li>
+            <li class="portfolio-frame">
+              <img
+                src="./images/portfolio/onlinecourses.jpg"
+                alt="online courses"
+                width="360"
+              />
+              <div class="portfolio-list">
                 <h3 class="portfolio-offers">Online Courses</h3>
                 <p class="portfolio-text">Marketing</p>
-              </li>
-            </ul>
-          </div>
+              </div>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
