creat word container in header css file

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <body>
     <header class="header">
-      <div class="conteiner">
+      <div class="container">
         <div class="header-inner">
           <nav class="header-list">
             <a class="content-logo" href="./index.html"
