--- a/index.html
+++ b/index.html
@@ -25,40 +25,38 @@
 
   <body>
     <header class="header">
-      <div class="container">
-        <div class="header-inner">
-          <nav class="header-list">
-            <a class="content-logo" href="./index.html"
-              >Web<span class="content-studio">Studio</span></a
-            >
-            <ul class="header-meny">
-              <li>
-                <a class="header-meny-list" href="./index.html">Studio</a>
-              </li>
-              <li>
-                <a class="header-meny-list" href="">Portfolio</a>
-              </li>
-              <li>
-                <a class="header-meny-list" href="">Contacts</a>
-              </li>
-            </ul>
-          </nav>
+      <div class="container header-inner">
+        <nav class="header-list">
+          <a class="content-logo" href="./index.html"
+            >Web<span class="content-studio">Studio</span></a
+          >
+          <ul class="header-meny">
+            <li>
+              <a class="header-meny-list" href="./index.html">Studio</a>
+            </li>
+            <li>
+              <a class="header-meny-list" href="">Portfolio</a>
+            </li>
+            <li>
+              <a class="header-meny-list" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
 
-          <address class="adress">
-            <ul class="adress-nav">
-              <li>
-                <a class="adress-info" href="mailto:info@devstudio.com"
-                  >info@devstudio.com</a
-                >
-              </li>
-              <li>
-                <a class="adress-info" href="tel:+110001111111"
-                  >+11 (000) 111-11-11</a
-                >
-              </li>
-            </ul>
-          </address>
-        </div>
+        <address class="adress">
+          <ul class="adress-nav">
+            <li>
+              <a class="adress-info" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="adress-info" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
       </div>
     </header>
     <main>
