--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
       <section class="hero-logo">
         <div class="container">
           <h1 class="hero-slogan">Effective solutions for your business</h1>
-
           <button class="button-primery" type="button">Order service</button>
         </div>
       </section>
@@ -147,6 +146,7 @@
                 src="./images/img3.jpg"
                 alt="Photo Camila"
                 width="264"
+                height="260"
               />
               <div class="team-name">
                 <h3 class="team-name-list">Camila Garcia</h3>
